--- a/js_exercises_top/rock_paper_scissors/style.css
+++ b/js_exercises_top/rock_paper_scissors/style.css
@@ -15,6 +15,11 @@ button {
     border-radius: 5px;
     border-width: 2px;
     border-color: gray;
+    cursor: pointer;
+}
+
+button:disabled {
+    cursor:default;
 }
 
 #results {
