Rewrite using finite state machine
- Because of course finite state machine is easier my ece253 chud life

--- a/calc/style.css
+++ b/calc/style.css
@@ -58,6 +58,6 @@ header small {
     background-color: rgb(174, 174, 174)
 }
 
-#div-calculator button.operation {
+#div-calculator button.operator {
     background-color: rgb(255, 165, 0)
 }
